# moddata

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: flake8-lint.yml  lint.yml  pylint.yml  python-tests.yml  ruff-lint.yml
moddata/: __init__.py  _utils.py
moddata/data/: _make_btc_dataset.py  _setup_data.py  geomagnetic_activity.parquet  pl_banking_stocks.parquet  spx_1901-2025.parquet  sunspots.parquet  world_bank_oil_gold_monthly_prices.csv  world_bank_oil_gold_monthly_prices.parquet
moddata/dg/: dg.py
moddata/extractor/: bankchurn_extractor.py  download_cboe_data_extractor.py  download_geomagnetic_index_extractor.py  download_sunspots_extractor.py
moddata/pipeline/: bankchurn_pipeline.py  oil_gold_monthly_prices_pipeline.py  spx_1901_to_2025_pipeline.py
moddata/sklearn_extensions/: log_standard_scaler.py
moddata/src/: config.py  constants.py  extractor.py  pipeline.py  transformer.py
moddata/transformer/: bankchurn_transformer.py
tests/: test_load_data.py
tests/pipeline/: test_bankchurn_pipeline.py
tests/sklearn_extensions/: log_standard_scaler.py  test_log_standard_scaler.py
