[project]
name = "moddata"
version = "0.0.3"
description = "Datasets for modeling"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Artur Wegrzyn", email = "awegrzyn17@gmail.com" }
]
maintainers = [
  {name = "Artur Wegrzyn", email = "awegrzyn17@gmail.com" }
]
dependencies = [
    "fastparquet>=2025.12.0",
    "flake8>=7.3.0",
    "kagglehub>=1.0.0",
    "numpy>=2.4.2",
    "pandas",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"moddata.data" = [
    "bankchurn.csv",
    "btc.zip",
    "pl_banking_stocks.parquet",
    "world_bank_oil_gold_monthly_prices.parquet"
]
